routing main link done

--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -1,1 +1,4 @@
-<p>homepage works!</p>
+<div>
+    <button type="button" routerLink="/list-cars">Search/List</button>
+    <button type="button" routerLink="/list-car/id1">Individual</button>
+</div>
