--- a/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
+++ b/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
@@ -1,1 +1,8 @@
-<p>toolbar works!</p>
+<div style="border:black 1px solid">
+    <button type="button" routerLink="/home">Home</button>
+    <p>Header</p>
+    <button type="button" routerLink="/home">Home</button>
+    <button type="button" routerLink="/login">Login</button>
+    <button type="button" routerLink="/register">Register:toDO</button>
+</div>
+
