linking all routing tgt

--- a/client/c2c-app/src/app/components/main/footer/footer.component.html
+++ b/client/c2c-app/src/app/components/main/footer/footer.component.html
@@ -1,1 +1,7 @@
-<div style="border:black 1px solid"><p>FOOTER</p></div>
+<div style="border:black 1px solid">
+    <p>FOOTER</p>
+    <button type="button" routerLink="/contact-us">contact-us</button>
+    <button type="button" routerLink="/about-us">About Us</button>
+    <button type="button" routerLink="/FAQ">FAQ</button>
+    <button type="button" routerLink="/TnC">TnC</button>
+</div>
