--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -2,3 +2,35 @@
     <button type="button" routerLink="/list-cars">Search/List</button>
     <button type="button" routerLink="/list-car/id1">Individual</button>
 </div>
+<div>
+    <button type="button" routerLink="/renter/book-car/id5">renter/book-car</button>
+    <button type="button" routerLink="/renter/check-booking">renter/check-booking</button>
+    <button type="button" routerLink="/renter/manage-profile">renter/manage-profile</button>
+    <button type="button" routerLink="/renter/manage-booking">renter/manage-booking</button>
+</div>
+<div>
+    <button type="button" routerLink="/owner/add-car">owner add-car</button>
+    <button type="button" routerLink="/owner/manage-car">manage-car</button>
+    <button type="button" routerLink="/owner/list-booking">list-booking</button>
+    <button type="button" routerLink="/owner/manage-booking">manage-booking</button>
+    <button type="button" routerLink="/owner/manage-profile">manage-profile</button>
+    <button type="button" routerLink="/owner/auth-otp">auth-otp</button>
+    <button type="button" routerLink="/owner/register-otp">register-otp</button>
+</div>
+<div>
+    <button type="button" routerLink="/admin/add-car">admin add-car</button>
+    <button type="button" routerLink="/admin/manage-car">manage-car</button>
+    <button type="button" routerLink="/admin/list-booking">list-booking</button>
+    <button type="button" routerLink="/admin/manage-booking">manage-booking</button>
+    <button type="button" routerLink="/admin/manage-profile">manage-profile</button>
+    <button type="button" routerLink="/admin/auth-otp">auth-otp</button>
+    <button type="button" routerLink="/admin/register-otp">register-otp</button>
+    <button type="button" routerLink="/admin/manage-bookings">manage bookings</button>
+    <button type="button" routerLink="/admin/manage-booking">manage booking</button>
+    <button type="button" routerLink="/admin/manage-cars">manage cars</button>
+    <button type="button" routerLink="/admin/manage-car">manage car</button>
+    <button type="button" routerLink="/admin/manage-users">manage users</button>
+    <button type="button" routerLink="/admin/manage-user">manage user</button>
+    <button type="button" routerLink="/admin/manage-locations">manage locations</button>
+    <button type="button" routerLink="/admin/manage-location">manage location</button>
+</div>
