--- a/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
+++ b/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
@@ -3,6 +3,7 @@
     <p>Header</p>
     <button type="button" routerLink="/home">Home</button>
     <button type="button" routerLink="/login">Login</button>
-    <button type="button" routerLink="/register">Register:toDO</button>
+    <button type="button" routerLink="/register/renter">Register:renter</button>
+    <button type="button" routerLink="/register/owner">Register:Car owner</button>
 </div>
 
