--- a/client/c2c-app/src/app/components/main/authentication/register-renter.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/register-renter.component.html
@@ -1,1 +1,3 @@
-<p>register-renter works!</p>
+<p>register-renter works!123</p>
+
+<button type="button" (click)="createRenterProfile()">TEST create</button> 
