--- a/client/c2c-app/src/app/components/main/authentication/login.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/login.component.html
@@ -1,1 +1,7 @@
 <p>login works!</p>
+
+<form [formGroup]="loginForm" (ngSubmit)="authProfile()">
+    username:<input type="text" name="username" formControlName="username"/><br/>
+    password:<input type="text" name="password" formControlName="password"/><br/>
+    <button type="submit">Login</button>
+</form>
