jwt done and guard done

--- a/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
+++ b/client/c2c-app/src/app/components/main/toolbar/toolbar.component.html
@@ -5,5 +5,6 @@
     <button type="button" routerLink="/login">Login</button>
     <button type="button" routerLink="/register/renter">Register:renter</button>
     <button type="button" routerLink="/register/owner">Register:Car owner</button>
+    <button type="button" routerLink="/logout">Logout</button>
 </div>
 
