--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -1,5 +1,6 @@
 <div>
-    <button type="button" routerLink="/list-cars">Search/List</button>
+    <button type="button" routerLink="/list-cars/all">Search All</button>
+    <button type="button" routerLink="/list-cars/search">THis need to be a form !!!!! Search/List</button>
     <button type="button" routerLink="/list-car/id1">Individual</button>
 </div>
 <div>
