listing booking for car owner

--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -13,7 +13,7 @@
     <button type="button" routerLink="/owner/add-car">owner add-car</button>
     <button type="button" routerLink="/owner/manage-car">manage-car</button>
     <button type="button" routerLink="/owner/list-booking">list-booking</button>
-    <button type="button" routerLink="/owner/manage-booking">manage-booking</button>
+    <button type="button" routerLink="/owner/manage-booking/1">manage-booking</button>
     <button type="button" routerLink="/owner/manage-profile">manage-profile</button>
     <button type="button" routerLink="/owner/auth-otp">auth-otp</button>
     <button type="button" routerLink="/owner/register-otp">register-otp</button>
