--- a/client/c2c-app/src/app/components/owner/list-booking/list-booking.component.html
+++ b/client/c2c-app/src/app/components/owner/list-booking/list-booking.component.html
@@ -1,1 +1,5 @@
 <p>Car Owner list-booking works!</p>
+
+<div *ngFor="let book of booklist" style="border:black 1px solid" (click)="gotoManageBook()">
+    {{book.book_id}}
+</div>
