--- a/client/c2c-app/src/app/components/renter/check-booking-history/check-booking-history.component.html
+++ b/client/c2c-app/src/app/components/renter/check-booking-history/check-booking-history.component.html
@@ -1,1 +1,5 @@
 <p>renter check-booking-history works!</p>
+
+<div *ngFor="let book of booklist" style="border:black 1px solid" (click)="gotoManageBook(book.book_id)">
+        {{book.book_id}}
+    </div>
