profile photo uploaded

--- a/client/c2c-app/src/app/components/owner/manage-profile/manage-profile-image.component.html
+++ b/client/c2c-app/src/app/components/owner/manage-profile/manage-profile-image.component.html
@@ -1,1 +1,5 @@
-<p>manage-profile-image works!</p>
+<p>owner manage-profile-image works!</p>
+<form [formGroup]="uploadImageForm">
+    File:<input type="file" formControlName="profileImage" #profileImageFile ><br>
+    <button type="button" (click)="onUpload()" [disabled]="this.uploadImageForm.invalid">Upload</button>
+</form>
