add list car and manage car for owner

--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -11,7 +11,8 @@
 </div>
 <div>
     <button type="button" routerLink="/owner/add-car">owner add-car</button>
-    <button type="button" routerLink="/owner/manage-car">manage-car</button>
+    <button type="button" routerLink="/owner/list-cars">list-cars</button>
+    <button type="button" routerLink="/owner/manage-car/id1">manage-car</button>
     <button type="button" routerLink="/owner/list-booking">list-booking</button>
     <button type="button" routerLink="/owner/manage-booking/1">manage-booking</button>
     <button type="button" routerLink="/owner/manage-profile">manage-profile</button>
@@ -20,7 +21,8 @@
 </div>
 <div>
     <button type="button" routerLink="/admin/add-car">admin add-car</button>
-    <button type="button" routerLink="/admin/manage-car">manage-car</button>
+    <button type="button" routerLink="/admin/list-cars">list-cars</button>
+    <button type="button" routerLink="/admin/manage-car/id1">manage-car</button>
     <button type="button" routerLink="/admin/list-booking">list-booking</button>
     <button type="button" routerLink="/admin/manage-booking">manage-booking</button>
     <button type="button" routerLink="/admin/manage-profile">manage-profile</button>
