--- a/client/c2c-app/src/app/components/owner/manage-car/manage-car.component.html
+++ b/client/c2c-app/src/app/components/owner/manage-car/manage-car.component.html
@@ -1,1 +1,11 @@
 <p>Car Owner manage-car works!</p>
+
+<div *ngIf="car">
+    {{car.car_id}}<br>
+    {{car.owner_id}}<br>
+    {{car.year}}<br>
+    {{car.status}}<br>
+    {{car.country_code}}<br>
+    {{car.images_keys}}<br>
+    {{car.faq}}<br>
+</div>
