otp done.  business login for renter and owner is almost completed

--- a/client/c2c-app/src/app/components/main/homepage/homepage.component.html
+++ b/client/c2c-app/src/app/components/main/homepage/homepage.component.html
@@ -17,7 +17,7 @@
     <button type="button" routerLink="/owner/manage-booking/1">manage-booking</button>
     <button type="button" routerLink="/owner/manage-profile">manage-profile</button>
     <button type="button" routerLink="/owner/auth-otp">auth-otp</button>
-    <button type="button" routerLink="/owner/register-otp">register-otp</button>
+    <!--<button type="button" routerLink="/owner/register-otp">register-otp</button>-->
 </div>
 <div>
     <button type="button" routerLink="/admin/add-car">admin add-car</button>
