--- a/client/c2c-app/src/app/app.component.html
+++ b/client/c2c-app/src/app/app.component.html
@@ -1,3 +1,10 @@
-<router-outlet name="header"></router-outlet>
-<router-outlet></router-outlet>
-<router-outlet name="footer"></router-outlet>
+<div class="bg-imag" fxLayout="column" fxLayoutAlign="start">
+    <router-outlet name="header"></router-outlet>
+    <div style="padding: 1% 50px">
+        <router-outlet></router-outlet>
+    </div>
+    <router-outlet name="footer"></router-outlet>
+    <router-outlet name="tester"></router-outlet>
+</div>
+
+
