--- a/client/c2c-app/src/app/app.component.css
+++ b/client/c2c-app/src/app/app.component.css
@@ -16,3 +16,19 @@ right: 0;
 position: absolute;
 z-index: -1;   
 }
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 300px;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 300px;            /* Footer height */
+}
