--- a/client/c2c-app/src/app/app.component.html
+++ b/client/c2c-app/src/app/app.component.html
@@ -1,10 +1,18 @@
 <div class="bg-imag" fxLayout="column" fxLayoutAlign="start">
-    <router-outlet name="header"></router-outlet>
-    <div style="padding: 1% 50px">
-        <router-outlet></router-outlet>
+    <div>
+        <div>
+            <router-outlet name="header"></router-outlet>
+        </div>
+        <div style="padding: 2vh 50px">
+            <router-outlet></router-outlet>
+        </div>
+        <div style="padding: 3vh 50px; border: 3px solid black">
+            <router-outlet name="tester"></router-outlet>
+        </div>
     </div>
-    <router-outlet name="footer"></router-outlet>
-    <router-outlet name="tester"></router-outlet>
+    <div>
+        <router-outlet name="footer"></router-outlet>
+    </div>
 </div>
 
 
