--- a/client/c2c-app/src/app/components/main/authentication/login.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/login.component.html
@@ -1,7 +1,19 @@
-<p>login works!</p>
 
-<form [formGroup]="loginForm" (ngSubmit)="authProfile()">
-    username:<input type="text" name="username" formControlName="username"/><br/>
-    password:<input type="text" name="password" formControlName="password"/><br/>
-    <button type="submit">Login</button>
+<h3>Login Form</h3>
+<form [formGroup]="loginForm" (ngSubmit)="authProfile()" >
+    <div fxLayout="column" fxLayoutAlign="start">
+        <div>
+            <mat-form-field>
+                <input matInput placeholder="Your username" type="text" name="username" formControlName="username"/>
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field>
+                <input matInput placeholder="Your password" type="text" name="password" formControlName="password"/>
+            </mat-form-field>
+        </div>
+        <div>
+            <button mat-button color="primary" [disabled]="this.loginForm.invalid" type="submit">Login</button>
+        </div>
+    </div>
 </form>
