--- a/client/c2c-app/src/app/components/main/footer/footer.component.html
+++ b/client/c2c-app/src/app/components/main/footer/footer.component.html
@@ -1,12 +1,10 @@
-
-
 <mat-toolbar color="primary" fxLayout="column" fxLayoutAlign="start">
-    <ul>
-        <li class="nospacebetween"><a class="nospacebetween" routerLink="/contact-us">Contact Us</a></li>
-        <li class="nospacebetween"><a class="nospacebetween" routerLink="/about-us">About Us</a></li>
-        <li class="nospacebetween"><a class="nospacebetween" routerLink="/FAQ">FAQ</a></li>
-        <li class="nospacebetween"><a class="nospacebetween" routerLink="/TnC">TnC</a></li>
-    </ul>
+    <mat-toolbar-row fxLayout="row" fxLayoutAlign="start end">      
+        <a class="morespacebetween" routerLink="/contact-us">Contact Us</a>
+        <a class="morespacebetween" routerLink="/about-us">About Us</a>
+        <a class="morespacebetween" routerLink="/FAQ">FAQ</a>
+        <a class="morespacebetween" routerLink="/TnC">TnC</a>
+    </mat-toolbar-row>
     <mat-toolbar-row>
         <span>All right reserved.</span>
     </mat-toolbar-row>
