--- a/client/c2c-app/src/styles.css
+++ b/client/c2c-app/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.form-border{
+    border:solid black 2px;
+}
+
+.msg-text{
+    font-size: 1em;
+}
