--- a/client/c2c-app/src/app/components/main/authentication/register-renter.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/register-renter.component.html
@@ -44,7 +44,7 @@
                     </mat-form-field>
                 </div>
                 <div>
-                    <button mat-button color="primary" [disabled]="this.registerRenterForm.invalid" type="submit">
+                    <button mat-raised-button color="primary" [disabled]="this.registerRenterForm.invalid" type="submit">
                         Register
                     </button>
                 </div>
