--- a/client/c2c-app/src/app/components/main/cars/list.component.html
+++ b/client/c2c-app/src/app/components/main/cars/list.component.html
@@ -1,7 +1,27 @@
-<p>list works!</p>
+<div *ngIf="listOfCar" fxLayout="column" fxLayoutAlign="start">
+    <div *ngFor="let car of listOfCar" (click)="gotoCarDetail(car.car_id)">
+        {{car.car_id}}
+        {{car.vehicle_regis_no}}
+        {{car.rental_rate}}
+    </div>
+    <mat-card *ngFor="let car of listOfCar" (click)="gotoCarDetail(car.car_id)">
+        <mat-card-header>
+            <div mat-card-avatar >
+                <img class="imagecircleicon" [src]="'https://c2c.sgp1.digitaloceanspaces.com/images/car/'+car.image_key">
+            </div>
+            <mat-card-title>{{car.maker}} {{car.model}}</mat-card-title>
+            <mat-card-subtitle><strong>${{car.rental_rate}} per day</strong></mat-card-subtitle>
+            <mat-card-subtitle>Owner: {{car.first_name}} {{car.last_name}}</mat-card-subtitle>
+            <mat-card-subtitle>{{car.car_id}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+                <img class="imagecar" [src]="'https://c2c.sgp1.digitaloceanspaces.com/images/car/car1.jpg'">
+        </mat-card-content>
+        <mat-card-footer>
+            <button mat-button color="primary" type="button" (click)="gotoCarDetail(car.car_id)">View Details</button>
+            <button type="button" routerLink="/renter/book-car/{{car.car_id}}">Book Car</button>
+        </mat-card-footer>
+    </mat-card>
 
-<div *ngFor="let car of listOfCar" (click)="gotoCarDetail(car.car_id)">
-    {{car.car_id}}
-    {{car.vehicle_regis_no}}
-    {{car.rental_rate}}
-</div> 
+
+</div>
