--- a/client/c2c-app/src/app/components/main/authentication/login.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/login.component.html
@@ -13,7 +13,27 @@
             </mat-form-field>
         </div>
         <div>
-            <button mat-button color="primary" [disabled]="this.loginForm.invalid" type="submit">Login</button>
+            <button mat-raised-button color="primary" [disabled]="this.loginForm.invalid" type="submit">Login</button>
         </div>
     </div>
 </form>
+
+<!--
+    <div fxLayout="column" fxLayoutAlign="start">
+        <div>
+            <mat-form-field>
+                <input placeholder="" formControlName="" matInput type="text"/>
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field>
+                <input placeholder="" formControlName="" matInput type="text"/>
+            </mat-form-field>
+        </div>
+        <div>
+            <button mat-raised-button color="primary" [disabled]="this.profileForm.invalid" type="submit">
+                Update
+            </button>
+        </div>
+    </div>
+-->
