--- a/client/c2c-app/src/app/components/main/authentication/register-owner.component.html
+++ b/client/c2c-app/src/app/components/main/authentication/register-owner.component.html
@@ -45,7 +45,7 @@
             </mat-form-field>
         </div>
         <div>
-            <button mat-button color="primary" [disabled]="this.registerOwnerForm.invalid" type="submit">
+            <button mat-raised-button color="primary" [disabled]="this.registerOwnerForm.invalid" type="submit">
                 Register
             </button>
         </div>
